--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -17,6 +17,11 @@
         <Setter Property="FontAutoScalingEnabled" Value="False"/>
         <Setter Property="FontFamily" Value="RegularFont"/>
     </Style>
+    <Style TargetType="Label" x:Key="BaseMediumLabelStyle">
+        <Setter Property="LineBreakMode" Value="TailTruncation"/>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
+        <Setter Property="FontFamily" Value="MediumFont"/>
+    </Style>
 
     <Style TargetType="Label" x:Key="IntroPageTextStyle" BasedOn="{StaticResource BaseRegularLabelStyle}">
         <Setter Property="FontSize" Value="16"/>
@@ -26,6 +31,18 @@
     <Style TargetType="Label" x:Key="IntroPageHeaderStyle" BasedOn="{StaticResource BaseBoldLabelStyle}">
         <Setter Property="FontSize" Value="32"/>
         <Setter Property="TextColor" Value="{StaticResource DarkTextColor}"/>
+    </Style>
+    <Style TargetType="Label" x:Key="PageHeaderStyle" BasedOn="{StaticResource BaseBoldLabelStyle}">
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="TextColor" Value="White"/>
+    </Style>
+    <Style TargetType="Label" x:Key="PageHeaderSubtitleStyle" BasedOn="{StaticResource BaseMediumLabelStyle}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="TextColor" Value="{StaticResource LightTextColor}"/>
+    </Style>
+    <Style TargetType="Label" x:Key="MenuLabelStyle" BasedOn="{StaticResource BaseRegularLabelStyle}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="TextColor" Value="#CCCCCC"/>
     </Style>
     <!--Button Styles-->
     <Style TargetType="Button" x:Key="ButtonStyle">
