--- a/Views/PlanetsPage.xaml
+++ b/Views/PlanetsPage.xaml
@@ -55,6 +55,7 @@
                     HorizontalOptions="End"/>
             </VerticalStackLayout>
         </Grid>
+
         
         <!--Main Content-->
         <Grid
@@ -74,53 +75,167 @@
                     Style="{StaticResource PageHeaderSubtitleStyle}"
                     Text="The milky way galaxy"/>
             </VerticalStackLayout>
+            <Border
+                WidthRequest="56"
+                HeightRequest="56"
+                VerticalOptions="Center"
+                HorizontalOptions="End"
+                Stroke="{StaticResource LightBordedColor}"
+                StrokeThickness="6"
+                Grid.Row="0"
+                Grid.Column="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="28"/>
+                </Border.StrokeShape>
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="ProfilePicture_Clicked"/>
+                </Border.GestureRecognizers>
+                <Image
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"
+                    WidthRequest="50"
+                    HeightRequest="50"
+                    Source="risto.jpg">
+                    <Image.Clip>
+                        <EllipseGeometry
+                            Center="25,25"
+                            RadiusX="25"
+                            RadiusY="25"/>
+                    </Image.Clip>
+                </Image>
 
-        </Grid>
-        <!--Main Content ScrollView-->
-        <ScrollView
-            Grid.Row="1"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            HorizontalScrollBarVisibility="Never"
-            VerticalScrollBarVisibility="Never"
-            Margin="0,32,-24,0">
+            </Border>
+            <!--Main Content ScrollView-->
+            <ScrollView
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalScrollBarVisibility="Never"
+                VerticalScrollBarVisibility="Never"
+                Margin="0,32,-24,0">
 
-            <VerticalStackLayout
-                Spacing="12">
-                
-                <!--Search Box-->
-                <Border
-                    Padding="12,4"
-                    BackgroundColor="DarkGray"
-                    Stroke="{StaticResource BorderColor}"
-                    HorizontalOptions="Fill"
-                    Margin="0,0,24,0"
-                    HeightRequest="48">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="6"/>
-                    </Border.StrokeShape>
+                <VerticalStackLayout
+                    Spacing="12">
 
-                    <Grid
+                    <!--Search Box-->
+                    <Border
+                        Padding="12,4"
+                        BackgroundColor="DarkGray"
+                        Stroke="{StaticResource BorderColor}"
                         HorizontalOptions="Fill"
-                        VerticalOptions="Center"
-                        ColumnDefinitions="Auto,*"
-                        ColumnSpacing="16">
+                        Margin="0,0,24,0"
+                        HeightRequest="48">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="6"/>
+                        </Border.StrokeShape>
 
-                        <Image
-                            WidthRequest="18"
-                            HeightRequest="18"
-                            Source="imgsearch.png"
-                            Grid.Column="0"
-                            VerticalOptions="Center" />
-                        <Label
-                            Text="Search for your favorite planet"
-                            Grid.Column="1"
+                        <Grid
+                            HorizontalOptions="Fill"
                             VerticalOptions="Center"
-                            VerticalTextAlignment="Center"
-                            Style="{StaticResource MenuLabelStyle}"/>
-                    </Grid>
-                </Border>
-            </VerticalStackLayout>
-        </ScrollView>
+                            ColumnDefinitions="Auto,*"
+                            ColumnSpacing="16">
+
+                            <Image
+                                WidthRequest="18"
+                                HeightRequest="18"
+                                Source="imgsearch.png"
+                                Grid.Column="0"
+                                VerticalOptions="Center" />
+                            <Label
+                                Text="Search for your favorite planet"
+                                Grid.Column="1"
+                                VerticalOptions="Center"
+                                VerticalTextAlignment="Center"
+                                Style="{StaticResource MenuLabelStyle}"/>
+                        </Grid>
+                    </Border>
+                    <!--Most Popular Section-->
+                    <Label
+                        Style="{StaticResource PageSubHeaderStyle}"
+                        Margin="0,12,0,0">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Most Popluar   "/>
+                                <Span Text="→" FontSize="20"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+
+                    <CollectionView
+                        x:Name="lstPopularPlanets"
+                        HeightRequest="280"
+                        SelectionMode="Single"
+                        SelectionChanged="Planets_SelectionChanged">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout
+                                Orientation="Horizontal"
+                                ItemSpacing="16"/>
+                        </CollectionView.ItemsLayout>
+                    </CollectionView>
+                </VerticalStackLayout>
+            </ScrollView>
+
+            <Border
+                Padding="16.0"
+                BackgroundColor="#393965"
+                Stroke="{StaticResource BorderColor}"
+                HorizontalOptions="Fill"
+                VerticalOptions="End"
+                Margin="0,0,0,20"
+                HeightRequest="90"
+                Grid.Column="0"
+                Grid.ColumnSpan="2">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="45"/>
+                </Border.StrokeShape>
+                <Grid
+                    HorizontalOptions="Fill"
+                    VerticalOptions="Center"
+                    RowDefinitions="Auto,Auto"
+                    ColumnDefinitions="*,*,*"
+                    RowSpacing="6">
+
+                    <Image
+                        WidthRequest="30"
+                        HeightRequest="30"
+                        Source="imgexplore.png"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        HorizontalOptions="Center"/>
+                    <Label
+                        Text="Explore"
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource MenuLabelStyle}"/>
+                    <Image
+                        WidthRequest="30"
+                        HeightRequest="30"
+                        Source="imgfavorite.png"
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        HorizontalOptions="Center"/>
+                    <Label
+                        Text="Favorite"
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource MenuLabelStyle}"/>
+                    <Image
+                        WidthRequest="30"
+                        HeightRequest="30"
+                        Source="imgprofile.png"
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        HorizontalOptions="Center"/>
+                    <Label
+                        Text="Profile"
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource MenuLabelStyle}"/>
+                </Grid>
+            </Border>
+        </Grid>
     </Grid>
 </ContentPage>
